<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

<TextView
    android:id="@+id/height"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/height"
    android:textStyle="bold"
    android:textSize="24dp"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/heighthere"
        android:id="@+id/val_height"
        android:inputType="number"
        android:textColorHint="@color/colorAccent"
        />



    <TextView
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textStyle="bold"
        android:textSize="24dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weighthere"
        android:id="@+id/val_weight"
        android:inputType="number"
        android:textColorHint="@color/colorAccent"

        />

    <Button
        android:id="@+id/val_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:textStyle="bold"
        android:textSize="24dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/val_bmi"

        />
</LinearLayout>